--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <div class="course2">
                 <div class="box1">
                     <div class="title">
+                        <img src="" alt="">
                         <img src="images/ocean.jpg">
                         <h2>Title 1</h2>
                     </div>
