--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <div class="course2">
                 <div class="box1">
                     <div class="title">
-                        <img src="" alt="">
-                        <img src="images/ocean.jpg">
+                        <div class="star"><img src="images/star.svg"></div>
+                        <div class="ocean"><img src="images/ocean.jpg"></div>
                         <h2>Title 1</h2>
                     </div>
                     <div class="title">
