--- a/index.html
+++ b/index.html
@@ -59,33 +59,40 @@
                         <h2>Title 1</h2>
                     </div>
                     <div class="title">
-                        <img src="images/ocean.jpg">
+                        <div class="star"><img src="images/star.svg"></div>
+                        <div class="ocean"><img src="images/ocean.jpg"></div>
                         <h2>Title 2</h2>
                     </div>
                     <div class="title">
-                        <img src="images/ocean.jpg">
+                        <div class="star"><img src="images/star.svg"></div>
+                        <div class="ocean"><img src="images/ocean.jpg"></div>
                         <h2>Title 3</h2>
                     </div>
                     <div class="title">
-                        <img src="images/ocean.jpg">
+                        <div class="star"><img src="images/star.svg"></div>
+                        <div class="ocean"><img src="images/ocean.jpg"></div>
                         <h2>Title 4</h2>
                     </div>
                 </div>
                 <div class="box2">
                     <div class="title">
-                        <img src="images/ocean.jpg">
+                        <div class="star"><img src="images/star.svg"></div>
+                        <div class="ocean"><img src="images/ocean.jpg"></div>
                         <h2>Title 5</h2>
                     </div>
                     <div class="title">
-                        <img src="images/ocean.jpg">
+                        <div class="star"><img src="images/star.svg"></div>
+                        <div class="ocean"><img src="images/ocean.jpg"></div>
                         <h2>Title 6</h2>
                     </div>
                     <div class="title">
-                        <img src="images/ocean.jpg">
+                        <div class="star"><img src="images/star.svg"></div>
+                        <div class="ocean"><img src="images/ocean.jpg"></div>
                         <h2>Title 7</h2>
                     </div>
                     <div class="title">
-                        <img src="images/ocean.jpg">
+                        <div class="star"><img src="images/star.svg"></div>
+                        <div class="ocean"><img src="images/ocean.jpg"></div>
                         <h2>Title 8</h2>
                     </div>
                 </div>
